# Leetcode

./: .gitignore  README.md  go.mod  justfile  leetgo.yaml
Arrays & Hashing/1. Two Sum/: main.go
Arrays & Hashing/217. Contains Duplicate/: main.go
Arrays & Hashing/242. Valid Anagram/: main.go
ArraysAndHashing/ContainsDuplicate/: ContainsDuplicate.go
ArraysAndHashing/GroupAnagrams/: GroupAnagrams.go
ArraysAndHashing/LongestConsecutiveSequence/: LongestConsecutiveSequence.go
ArraysAndHashing/ProductOfArrayExceptSelf/: ProductOfArrayExceptSelf.go
ArraysAndHashing/TopKFrequentElements/: TopKFrequentElements.go
ArraysAndHashing/TwoSum/: TwoSum.go
ArraysAndHashing/ValidAnagram/: ValidAnagram.go
ArraysAndHashing/ValidSudoku/: ValidSudoku.go
BinarySearch/: BinarySearch.go
BinarySearch/FindMinimumInRotatedSortedArray/: FindMinimumInRotatedSortedArray.go
BinarySearch/KokoEatingBananas/: KokoEatingBananas.go
BinarySearch/SearchInRotatedSortedArray/: SearchInRotatedSortedArray.go
BinarySearch/Searcha2DMatrix/: Searcha2DMatrix.go
LinkedList/ReverseLinkedList/: ReverseLinkedList.go
Stack/DailyTemperatures/: DailyTemperatures.go
Stack/EvaluateReversePolishNotation/: EvaluateReversePolishNotation.go
Stack/GenerateParentheses/: GenerateParentheses.go
Stack/MinStack/: MinStack.go
Stack/ValidParentheses/: ValicParentheses.go
TwoPointers/3Sum/: 3Sum.go
TwoPointers/ContainerWithMostWater/: ContainerWithMostWater.go
TwoPointers/TwoSumIIInputArrayIsSorted/: TwoSumIIInputArrayIsSorted.go
TwoPointers/ValidPalindrome/: ValidPalindrome.go
go/: go.mod  go.sum
go/0001.two-sum/: solution.go
go/0011.container-with-most-water/: solution.go
go/0015.3sum/: solution.go
go/0020.valid-parentheses/: solution.go
go/0022.generate-parentheses/: solution.go
go/0033.search-in-rotated-sorted-array/: solution.go
go/0036.valid-sudoku/: solution.go
go/0049.group-anagrams/: solution.go
go/0074.search-a-2d-matrix/: solution.go
go/0125.valid-palindrome/: solution.go
rust/: Cargo.toml
rust/src/0001.two-sum/: solution.rs
rust/src/0003.longest-substring-without-repeating-characters/: question.md  solution.rs
rust/src/0015.3sum/: solution.rs
rust/src/0036.valid-sudoku/: solution.rs
rust/src/0049.group-anagrams/: solution.rs
rust/src/0125.valid-palindrome/: solution.rs
rust/src/0128.longest-consecutive-sequence/: solution.rs  testcases.txt
rust/src/0167.two-sum-ii-input-array-is-sorted/: solution.rs
rust/src/0217.contains-duplicate/: solution.rs
rust/src/0238.product-of-array-except-self/: solution.rs
rust/src/0242.valid-anagram/: solution.rs
rust/src/0347.top-k-frequent-elements/: solution.rs
rust/src/0739.daily-temperatures/: solution.rs
(+13 files in other folders)
