[[bin]]
name = 'two-sum'
path = 'src/0001.two-sum/solution.rs'

[[bin]]
name = 'longest-substring-without-repeating-characters'
path = 'src/0003.longest-substring-without-repeating-characters/solution.rs'

[[bin]]
name = '3sum'
path = 'src/0015.3sum/solution.rs'

[[bin]]
name = 'valid-sudoku'
path = 'src/0036.valid-sudoku/solution.rs'

[[bin]]
name = 'group-anagrams'
path = 'src/0049.group-anagrams/solution.rs'

[[bin]]
name = 'valid-palindrome'
path = 'src/0125.valid-palindrome/solution.rs'

[[bin]]
name = 'longest-consecutive-sequence'
path = 'src/0128.longest-consecutive-sequence/solution.rs'

[[bin]]
name = 'two-sum-ii-input-array-is-sorted'
path = 'src/0167.two-sum-ii-input-array-is-sorted/solution.rs'

[[bin]]
name = 'contains-duplicate'
path = 'src/0217.contains-duplicate/solution.rs'

[[bin]]
name = 'product-of-array-except-self'
path = 'src/0238.product-of-array-except-self/solution.rs'

[[bin]]
name = 'valid-anagram'
path = 'src/0242.valid-anagram/solution.rs'

[[bin]]
name = 'top-k-frequent-elements'
path = 'src/0347.top-k-frequent-elements/solution.rs'

[[bin]]
name = 'daily-temperatures'
path = 'src/0739.daily-temperatures/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2024'
name = 'leetcode-solutions'
version = '0.1.0'
